# Diploma_Sculptor

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_commands.json  launch.bat
Libraries/SOIL/: CMakeLists.txt
include/Commands/: CentralizeCameraCommand.hpp  CloseCommand.hpp  MoveCameraCommand.hpp  MoveObjectCommand.hpp  ResizeCommand.hpp  RotateCameraAroundCommand.hpp  SculptorPullCommand.hpp  SwitchVideoModeCommand.hpp
include/Commands/Base/: MoveCommand.hpp
include/Components/: Camera.hpp  Material.hpp  Object.hpp  Scene.hpp
include/Components/LightSources/: BaseLightSource.hpp  DirectLight.hpp  SpotLight.hpp
include/Helpers/: Converter.hpp  ThreadPool.hpp  Timer.hpp
include/Systems/: EarClipper.hpp  Engine.hpp  Sculptor.hpp
include/Systems/Editing/: Sculptor.hpp
include/Systems/Parsing/: ImageParser.hpp  MtlParser.hpp
include/Types/: Enums.hpp  Graph.hpp  Matrix.hpp  SphericalCoordinate.hpp  Texture.hpp  Triangle.hpp  VertexIds.hpp
include/UI/: MainWindow.hpp
resources/shaders/: base.frag  base.vert
resources/shaders/flat/: flat.frag  flat.vert
resources/shaders/lines/: lines.frag  lines.vert
resources/shaders/loading/: loading.frag  loading.vert
resources/shaders/normals/: flatNormals.frag  normals.frag
resources/shaders/phong/: phong.frag  phong.vert
src/: Globals.cpp  main.cpp
src/Commands/: CentralizeCameraCommand.cpp  CentralizeCameraCommand.hpp  CloseCommand.cpp  CloseCommand.hpp  MoveCameraCommand.cpp  MoveObjectCommand.cpp  MoveObjectCommand.hpp  ResizeCommand.cpp  ResizeCommand.hpp  RotateCameraAroundCommand.cpp  SculptorPullCommand.cpp  SculptorPullCommand.hpp  SwitchVideoModeCommand.cpp
src/Commands/Base/: Command.hpp  MoveCommand.cpp  MoveCommand.hpp
src/Components/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  InputEngine.cpp  InputEngine.hpp  MainWindow.cpp  MainWindow.hpp  Object.cpp  RenderEngine.cpp  RenderEngine.hpp  Scene.cpp  Scene.hpp
src/Components/LightSources/: DirectLight.cpp
src/Engines/Input/: BaseInputEngine.cpp  BaseInputEngine.hpp  EditInputEngine.cpp  EditInputEngine.hpp  LoadingInputEngine.cpp  LoadingInputEngine.hpp  ModelInputEngine.cpp  ModelInputEngine.hpp  ViewInputEngine.cpp  ViewInputEngine.hpp
src/Engines/Render/: BaseRenderEngine.hpp  LoadingRenderEngine.cpp  LoadingRenderEngine.hpp  ModelRenderEngine.cpp  ModelRenderEngine.hpp
src/Events/: BrushMoveEvent.cpp  BrushMoveEvent.hpp  CameraMoveEvent.cpp  CameraRotateEvent.cpp  CameraRotateEvent.hpp  CaptureMouseEvent.cpp  CaptureMouseEvent.hpp  CloseEvent.cpp  CloseEvent.hpp  IEvent.hpp  ObjectsLoadedEvent.cpp  ObjectsLoadedEvent.hpp  ReleaseMouseEvent.cpp  ReleaseMouseEvent.hpp  SculptorEditEvent.cpp  SculptorEditEvent.hpp
src/Events/Camera/: CameraMoveEvent.hpp  CameraRotateEvent.cpp  CameraRotateEvent.hpp
src/Events/Engine/: EngineLoadEvent.cpp  EngineLoadEvent.hpp
src/Events/Sculptor/: BrushMoveEvent.cpp  BrushMoveEvent.hpp  SculptorEditEvent.cpp  SculptorEditEvent.hpp
src/Events/Window/: CaptureMouseEvent.hpp  ReleaseMouseEvent.hpp
src/Helpers/: Concepts.hpp  Converter.cpp  Converter.hpp  Globals.cpp  Globals.hpp  Hasher.hpp  IBuilder.hpp  Math.cpp  Math.hpp  Settings.cpp  Settings.hpp  Timer.cpp  Timer.hpp
src/Lighting/: BaseLightSource.hpp  DirectLight.cpp  DirectLight.hpp  SpotLight.cpp  SpotLight.hpp
src/Object/: EntryIds.cpp  EntryIds.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  ObjectBuilder.cpp  ObjectBuilder.hpp  ObjectEntry.hpp  OldObject.cpp  OldObject.hpp  OldTexture.cpp  OldTexture.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp
src/ObjectData/: Material.cpp  Material.hpp  OldObject.cpp  OldObject.hpp  OldTexture.cpp  OldTexture.hpp  Triangle.cpp  Triangle.hpp  VertexIds.cpp  VertexIds.hpp
src/ObjectData/Object/: Object.cpp  Object.hpp  ObjectBuilder.cpp  ObjectBuilder.hpp  ObjectEntry.cpp
src/Parsing/: BaseTextParser.cpp  BaseTextParser.hpp  ImageParser.cpp  ImageParser.hpp  MtlParser.cpp  MtlParser.hpp  ObjParser.cpp  ObjParser.hpp
src/Parsing/ObjParse/: ObjParseResult.cpp  ObjParseResult.hpp  ObjParser.cpp  ObjParser.hpp
src/Parsing/ObjParser/: ObjParseResult.hpp  ObjParser.cpp  ObjParser.hpp
src/Render/: ShaderAttribute.cpp  ShaderAttribute.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramm.cpp  ShaderProgramm.hpp  Texture.cpp  Texture.hpp
src/Render/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramBuilder.cpp  ShaderProgramBuilder.hpp
src/Render/ShaderUniform/: ShaderUniform.cpp  ShaderUniform.hpp
src/Render/Texture/: Texture.cpp  Texture.hpp  TextureBuilder.cpp  TextureBuilder.hpp
src/Render/UniformLoaders/: BaseUniformLoader.cpp  BaseUniformLoader.hpp  IUniformLoader.hpp  LinesUniformLoader.cpp  LinesUniformLoader.hpp  LoadingUniformLoader.cpp  LoadingUniformLoader.hpp  ModelUniformLoader.cpp  ModelUniformLoader.hpp
src/ResourceManagers/ShaderProgramManager/: ShaderProgramManager.cpp  ShaderProgramManager.hpp
src/Sculpting/: Brush.cpp  Brush.hpp  Graph.cpp  Graph.hpp  Sculptor.cpp  Sculptor.hpp
src/States/: BaseState.cpp  BaseState.hpp  CloseState.cpp  CloseState.hpp  EditState.cpp  EditState.hpp  LoadingState.cpp  LoadingState.hpp  ViewState.cpp  ViewState.hpp
src/Systems/: EarClipper.cpp  Engine.cpp  Sculptor.cpp
src/Systems/Editing/: Sculptor.cpp
src/Systems/Parsing/: BaseTextParser.cpp  ImageParser.cpp  ObjParser.cpp
src/Triangulation/: EarClipper.cpp  EarClipper.hpp
src/Types/: Enums.hpp  Graph.cpp  Matrix.cpp  Matrix.hpp  Point.cpp  Point.hpp  SphericalCoordinate.cpp  Triangle.cpp  VertexIds.cpp
src/UI/: MainWindow.cpp
